--- a/css/offer.css
+++ b/css/offer.css
@@ -1,4 +1,4 @@
-.whyUs {
+.offer {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -12,7 +12,7 @@
 }
 
 @media (max-width: 1023px) {
-  .whyUs {
+  .offer {
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
@@ -21,7 +21,7 @@
   }
 }
 
-.whyUs__head {
+.offer__head {
   margin: 160px 0 40px 80px;
   font-family: Muli;
   font-style: normal;
@@ -34,14 +34,14 @@
 }
 
 @media (max-width: 1023px) {
-  .whyUs__head {
+  .offer__head {
     margin: 120px auto 40px auto;
     font-size: 52px;
     line-height: 54px;
   }
 }
 
-.whyUs__paragraph {
+.offer__paragraph {
   font-family: Muli;
   font-style: normal;
   font-weight: normal;
@@ -54,14 +54,14 @@
 }
 
 @media (max-width: 1023px) {
-  .whyUs__paragraph {
+  .offer__paragraph {
     padding: 0 40px;
     font-size: 20px;
     line-height: 28px;
   }
 }
 
-.whyUs__container {
+.offer__container {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -76,30 +76,30 @@
 }
 
 @media (max-width: 1023px) {
-  .whyUs__container {
+  .offer__container {
     margin-top: 80px;
     padding: 0 40px;
   }
 }
 
-.whyUs__icon {
+.offer__icon {
   margin: 0 auto;
 }
 
 @media (max-width: 1023px) {
-  .whyUs__icon {
+  .offer__icon {
     padding: 0;
   }
 }
 
-.whyUs__icon:hover {
+.offer__icon:hover {
   -webkit-transform: scale(1.4);
           transform: scale(1.4);
   -webkit-transition: 0.8s;
   transition: 0.8s;
 }
 
-.whyUs__header {
+.offer__header {
   font-family: Muli;
   font-style: normal;
   font-weight: 600;
@@ -111,7 +111,7 @@
   margin: 40px 0 16px 0;
 }
 
-.whyUs__introduction {
+.offer__introduction {
   font-family: Muli;
   font-style: normal;
   font-weight: normal;
@@ -123,19 +123,19 @@
 }
 
 @media (max-width: 1023px) {
-  .whyUs__introduction {
+  .offer__introduction {
     font-size: 16px;
     line-height: 24px;
   }
 }
 
-.whyUs--addBorder {
+.offer--addBorder {
   border-left: 1px solid rgba(5, 5, 5, 0.2);
   border-right: 1px solid rgba(5, 5, 5, 0.2);
 }
 
 @media (max-width: 1023px) {
-  .whyUs--addBorder {
+  .offer--addBorder {
     border: 0;
   }
 }
