--- a/css/style.css
+++ b/css/style.css
@@ -964,12 +964,17 @@
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
             flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
     padding: 0 40px;
+    margin: 80px auto 40px auto;
   }
 }
 
 .footer__item {
   max-width: 252px;
+  text-align: center;
 }
 
 @media (max-width: 1023px) {
